--- a/css/main.css
+++ b/css/main.css
@@ -230,8 +230,8 @@ body {
   transition: 0.3s ease;
   position: absolute;
   border-radius: 50%;
-  right: 0px;
-  top: 0px;
+  right: -100px;
+  top: -100px;
   z-index: 4;
 }
 
@@ -247,8 +247,8 @@ body {
       -ms-flex-direction: column;
           flex-direction: column;
   position: absolute;
-  right: -100px;
-  top: -100px;
+  right: 85px;
+  top: 25px;
   z-index: 5;
   -webkit-transition: 0.3s ease;
   transition: 0.3s ease;
@@ -588,6 +588,8 @@ body {
 
 .about .about-content .circle {
   height: 230px;
+  -webkit-filter: drop-shadow(0px 7px 6px rgba(24, 24, 24, 0.4));
+  filter: drop-shadow(0px 7px 6px rgba(24, 24, 24, 0.4));
 }
 
 @media screen and (min-width: 600px) {
