--- a/css/main.css
+++ b/css/main.css
@@ -146,7 +146,7 @@ body {
 }
 
 .wrapper {
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 .hero {
@@ -334,17 +334,17 @@ body {
 
 .hero .dots-left {
   position: absolute;
-  left: -40px;
+  left: -45px;
   z-index: -1;
-  top: 0;
-  height: 200px;
+  top: 4px;
+  height: 250px;
 }
 
 .hero .dots-right {
   position: absolute;
   right: -20px;
   bottom: 0;
-  height: 200px;
+  height: 250px;
 }
 
 .hero .triangle-sm {
@@ -624,19 +624,19 @@ body {
 .skills .skills-dots {
   position: absolute;
   z-index: -4;
-  height: 350px;
+  height: 250px;
 }
 
 .skills .skills-dots:nth-child(1) {
   top: -20px;
-  right: -102px;
+  right: -50px;
   -webkit-filter: invert(92%) sepia(9%) saturate(1373%) hue-rotate(48deg) brightness(100%) contrast(96%);
           filter: invert(92%) sepia(9%) saturate(1373%) hue-rotate(48deg) brightness(100%) contrast(96%);
 }
 
 .skills .skills-dots:nth-child(2) {
-  bottom: -200px;
-  left: -102px;
+  bottom: -100px;
+  left: -52px;
   -webkit-filter: invert(92%) sepia(9%) saturate(1411%) hue-rotate(79deg) brightness(100%) contrast(96%);
           filter: invert(92%) sepia(9%) saturate(1411%) hue-rotate(79deg) brightness(100%) contrast(96%);
 }
@@ -670,8 +670,8 @@ body {
 
 .skills .skill-card .skill-card-icon-container {
   text-align: center;
-  width: 100px;
-  height: 100px;
+  width: 80px;
+  height: 80px;
   border: 2px solid white;
   border-radius: 50%;
   padding: 10px;
@@ -706,6 +706,13 @@ body {
   .skills .skills-content {
     -ms-grid-columns: (minmax(200px, 1fr))[auto-fit];
         grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  }
+  .skills .skill-card .skill-card-icon-container {
+    width: 100px;
+    height: 100px;
+  }
+  .skills .skills-dots {
+    height: 350px;
   }
   .skills .skills-dots:nth-child(1) {
     top: -20px;
@@ -1002,15 +1009,85 @@ body {
 
 footer {
   font-size: 10px;
+  position: relative;
+}
+
+footer .dots,
+footer .circle,
+footer .tri {
+  position: absolute;
+  z-index: -1;
+  height: 250px;
+}
+
+footer .dots {
+  left: -47px;
+  top: 51px;
+  -webkit-filter: invert(92%) sepia(9%) saturate(1373%) hue-rotate(-49deg) brightness(128%) contrast(96%);
+          filter: invert(92%) sepia(9%) saturate(1373%) hue-rotate(-49deg) brightness(128%) contrast(96%);
+}
+
+footer .circle {
+  left: 50%;
+  -webkit-transform: translate(-50%, -25%);
+          transform: translate(-50%, -25%);
+}
+
+footer .tri {
+  right: -163px;
+  top: 38px;
+  -webkit-filter: invert(92%) sepia(9%) saturate(1373%) hue-rotate(48deg) brightness(100%) contrast(96%);
+          filter: invert(92%) sepia(9%) saturate(1373%) hue-rotate(48deg) brightness(100%) contrast(96%);
+  -webkit-transform: rotate(13deg);
+          transform: rotate(13deg);
 }
 
 @media screen and (min-width: 1080px) {
   footer {
     font-size: 13px;
   }
+  footer .dots,
+  footer .circle,
+  footer .tri {
+    height: 350px;
+  }
+  footer .dots {
+    left: 40px;
+    top: -92px;
+  }
+  footer .tri {
+    right: -140px;
+    top: -84px;
+    height: 400px;
+    -webkit-transform: rotate(27deg);
+            transform: rotate(27deg);
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  footer {
+    font-size: 13px;
+  }
+  footer .dots,
+  footer .circle,
+  footer .tri {
+    height: 350px;
+  }
+  footer .dots {
+    left: 100px;
+    top: -92px;
+  }
+  footer .tri {
+    right: -11px;
+    top: -84px;
+    height: 400px;
+    -webkit-transform: rotate(68deg);
+            transform: rotate(68deg);
+  }
 }
 
 .footer-content {
+  z-index: 100;
   padding-top: 50px;
   background: linear-gradient(255.29deg, rgba(64, 64, 68, 0.8) 3.51%, rgba(64, 64, 68, 0.76) 104.9%);
   padding: 50px 20px 20px 20px;
