--- a/css/main.scss
+++ b/css/main.scss
@@ -164,6 +164,7 @@ body {
 
 .wrapper {
   overflow: hidden;
+  overflow-y: auto;
 }
 //hero section
 .hero {
@@ -253,6 +254,7 @@ body {
         margin: 0.9em 0;
         color: $textPrimary;
         cursor: pointer;
+        transition: all 0.2s ease-in;
       }
 
       &.open {
@@ -374,8 +376,49 @@ body {
         right: 0;
       }
 
+      .nav a:nth-child(1) {
+        .nav-item:before {
+          background-color: $purple;
+        }
+      }
+      .nav a:nth-child(2) {
+        .nav-item:before {
+          background-color: $blue;
+        }
+      }
+      .nav a:nth-child(3) {
+        .nav-item:before {
+          background-color: $green;
+        }
+      }
+      .nav a:nth-child(4) {
+        .nav-item:before {
+          background-color: $blue;
+        }
+      }
+
       .mobile-nav-bg {
         display: none;
+      }
+
+      .nav-item {
+        position: relative;
+        &::before {
+          content: "";
+          width: 100%;
+          height: 2px;
+          position: absolute;
+          bottom: -5px;
+          transform: scale(0, 1);
+          transition: transform 0.3s ease;
+          transform-origin: 0% 100%;
+        }
+      }
+
+      .nav-item:hover {
+        &::before {
+          transform: scale(1, 1);
+        }
       }
     }
 
@@ -1089,8 +1132,6 @@ footer {
 
   .circle {
     left: 50%;
-    -ms-transform: translate(-50%, -25%);
-    transform: translate(-50%, -25%);
   }
 
   .tri {
