--- a/css/main.css
+++ b/css/main.css
@@ -1203,7 +1203,7 @@ footer .tri {
   z-index: 100;
   padding-top: 50px;
   background: linear-gradient(255.29deg, rgba(64, 64, 68, 0.8) 3.51%, rgba(64, 64, 68, 0.76) 104.9%);
-  padding: 50px 20px 20px 20px;
+  padding: 50px 10px 20px 10px;
   margin-top: 50px;
   font-size: 16px;
 }
@@ -1252,6 +1252,10 @@ footer .tri {
           align-items: center;
 }
 
+.footer-content .credits a {
+  color: #ffffff;
+}
+
 .footer-content .credits img {
   height: 20px;
   -webkit-filter: invert(98%) sepia(28%) saturate(1411%) hue-rotate(268deg) brightness(50%) contrast(74%);
@@ -1259,6 +1263,9 @@ footer .tri {
 }
 
 @media screen and (min-width: 1080px) {
+  .footer-content {
+    padding: 50px 20px 20px 20px;
+  }
   .footer-content .link-wrapper {
     -webkit-column-gap: 100px;
             column-gap: 100px;
