--- a/css/main.scss
+++ b/css/main.scss
@@ -1187,7 +1187,7 @@ footer {
   z-index: 100;
   padding-top: 50px;
   background: $backgroundColorFaded;
-  padding: 50px 20px 20px 20px;
+  padding: 50px 10px 20px 10px;
   margin-top: 50px;
   font-size: 16px;
   .link-wrapper {
@@ -1215,7 +1215,12 @@ footer {
     color: $textFaded;
     display: flex;
     justify-content: space-between;
+
     align-items: center;
+
+    a {
+      color: $textPrimary;
+    }
     img {
       height: 20px;
 
@@ -1225,6 +1230,8 @@ footer {
   }
 
   @media screen and (min-width: 1080px) {
+    padding: 50px 20px 20px 20px;
+
     .link-wrapper {
       column-gap: 100px;
       row-gap: 50px;
