--- a/css/main.css
+++ b/css/main.css
@@ -549,6 +549,13 @@ body {
   display: -ms-grid;
   display: grid;
   justify-items: center;
+  position: relative;
+}
+
+.section-spacing .fake-anchor {
+  top: -150px;
+  pointer-events: none;
+  position: absolute;
 }
 
 @media screen and (min-width: 600px) {
