--- a/css/main.scss
+++ b/css/main.scss
@@ -134,6 +134,13 @@ html {
   scroll-behavior: smooth;
 }
 
+// section:before {
+//   content: "";
+//   display: block;
+//   height: 0px;
+//   margin: -0px 0 0;
+// }
+
 a {
   text-decoration: none;
 }
@@ -566,6 +573,13 @@ body {
   font-size: 16px;
   display: grid;
   justify-items: center;
+  position: relative;
+
+  .fake-anchor {
+    top: -150px;
+    pointer-events: none;
+    position: absolute;
+  }
 
   @media screen and (min-width: 600px) {
     font-size: 20px;
