--- a/css/main.scss
+++ b/css/main.scss
@@ -130,9 +130,9 @@ table {
   border-spacing: 0;
 }
 
-html {
-  scroll-behavior: smooth;
-}
+// html {
+//   scroll-behavior: smooth;
+// }
 
 // section:before {
 //   content: "";
