--- a/css/main.scss
+++ b/css/main.scss
@@ -942,6 +942,14 @@ body {
       color: white;
       opacity: 1;
     }
+
+    @media (hover: hover) {
+      .project-card-img-section:hover .project-hidden-links {
+        position: absolute;
+        color: white;
+        opacity: 1;
+      }
+    }
     .project-hidden-links {
       position: absolute;
       top: 0;
@@ -970,8 +978,11 @@ body {
       border-radius: 5px;
       transition: all 0.2s ease-in-out;
     }
-    .project-card-img-section:hover img {
-      filter: blur(2px);
+
+    @media (hover: hover) {
+      .project-card-img-section:hover img {
+        filter: blur(2px);
+      }
     }
 
     .project-card-img-section a {
@@ -985,10 +996,12 @@ body {
       transition: all 0.2s ease-in-out;
     }
 
-    .project-card-img-section a:hover {
-      background-color: $backgroundColor;
-      color: $green;
-      cursor: pointer;
+    @media (hover: hover) {
+      .project-card-img-section a:hover {
+        background-color: $backgroundColor;
+        color: $green;
+        cursor: pointer;
+      }
     }
 
     .project-desc-wrapper {
