--- a/css/main.css
+++ b/css/main.css
@@ -487,7 +487,7 @@ body {
   }
   .hero .dots-right {
     right: -50px;
-    bottom: 0;
+    bottom: -100px;
     height: 350px;
     -webkit-filter: invert(92%) sepia(9%) saturate(1373%) hue-rotate(48deg) brightness(100%) contrast(96%);
             filter: invert(92%) sepia(9%) saturate(1373%) hue-rotate(48deg) brightness(100%) contrast(96%);
