--- a/css/main.scss
+++ b/css/main.scss
@@ -507,7 +507,7 @@ body {
 
     .dots-right {
       right: -50px;
-      bottom: 0;
+      bottom: -100px;
       height: 350px;
       filter: $greenFilter;
     }
