--- a/css/main.css
+++ b/css/main.css
@@ -772,6 +772,13 @@ body {
   }
 }
 
+@media screen and (min-width: 1700px) {
+  .skills .skills-content {
+    -ms-grid-columns: (minmax(250px, 1fr))[auto-fit];
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  }
+}
+
 .project-content {
   display: -ms-grid;
   display: grid;
