--- a/css/main.scss
+++ b/css/main.scss
@@ -797,7 +797,13 @@ body {
 
   @media screen and (min-width: 1700px) {
     .skills-content {
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+    }
+  }
+
+  @media screen and (min-width: 2020px) {
+    .skills-content {
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     }
   }
 }
